[metadata]
name = kvantify-johnsonclique
version = attr: kvantify.johnsonclique.__version__
author = Søren Fuglede Jørgensen
author_email = sfj@kvantify.dk
description = A collection of methods for finding small clique covers of Johnson graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kvantify/johnson-clique-cover

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    numpy
    scipy

[options.packages.find]
where = src

[flake8]
max-line-length = 88
# Black will enforce an equal amount of whitespace around slice operators.
# Due to this, Flake8 will raise E203 whitespace before ':' warnings.
# Since this warning is not PEP 8 compliant, Flake8 should be configured to ignore it
extend-ignore = E203
